--- a/Home/home.html
+++ b/Home/home.html
@@ -4,12 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="home.css">
     <title>HALO WEB MONITER</title>
 </head>
 
 <body>
-    <div class="header">
+    <div class="bg-image">
+        <!-- Your content goes here -->
 
+        <header>
+            <nav class="menu">
+                <ul>
+                    <div class="logo">HALO App</div>
+
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Register to monitor data</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Solution</a></li>
+                    <li><a href="#" class="login">Log in/Sign in</a></li>
+                </ul>
+            </nav>
+        </header>
+
+
+        <div class="title">Welcome to HALO app, where we can monitor data....</div>
+        <div>
+            <button class="bt-moreDetails">MORE DETAILS <i class="fas fa-chevron-circle-right"></i></button>
+            <button class="bt-next"><i class="fas fa-caret-right"></i></button>
+        </div>
     </div>
 </body>
 
